--- a/PosApp/app/src/main/res/layout/fragment_add_menu.xml
+++ b/PosApp/app/src/main/res/layout/fragment_add_menu.xml
@@ -27,7 +27,7 @@
         android:layout_width="216dp"
         android:layout_height="71dp"
         android:layout_marginEnd="16dp"
-        android:text="追加へ"
+        android:text="追加"
         android:textSize="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
