--- a/PosApp/app/src/main/res/layout/fragment_home.xml
+++ b/PosApp/app/src/main/res/layout/fragment_home.xml
@@ -102,7 +102,7 @@
                     app:layout_constraintVertical_bias="0.19" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/tvDay"
                     android:layout_width="270dp"
                     android:layout_height="97dp"
                     android:layout_marginStart="20dp"
@@ -120,7 +120,7 @@
                     android:layout_width="107dp"
                     android:layout_height="97dp"
                     android:layout_marginTop="72dp"
-                    android:text="月間:"
+                    android:text="週間:"
                     android:textSize="40dp"
                     android:textColor="@color/black"
                     android:gravity="center"
@@ -130,7 +130,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/tvWeek"
                     android:layout_width="270dp"
                     android:layout_height="97dp"
                     android:layout_marginTop="72dp"
@@ -138,17 +138,17 @@
                     android:textColor="@color/black"
                     android:gravity="center"
                     android:textSize="40dp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView7"
+                    app:layout_constraintEnd_toEndOf="@+id/tvDay"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toStartOf="@+id/textView7"
-                    app:layout_constraintTop_toBottomOf="@+id/textView7" />
+                    app:layout_constraintStart_toStartOf="@+id/tvDay"
+                    app:layout_constraintTop_toBottomOf="@+id/tvDay" />
 
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="107dp"
                     android:layout_height="97dp"
                     android:layout_marginTop="72dp"
-                    android:text="年間:"
+                    android:text="月間:"
                     android:gravity="center"
                     android:textColor="@color/black"
                     android:textSize="40dp"
@@ -158,7 +158,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
                 <TextView
-                    android:id="@+id/textView11"
+                    android:id="@+id/tvMonth"
                     android:layout_width="270dp"
                     android:layout_height="97dp"
                     android:layout_marginTop="72dp"
@@ -166,21 +166,11 @@
                     android:textSize="40dp"
                     android:textColor="@color/black"
                     android:gravity="center"
-                    app:layout_constraintEnd_toEndOf="@+id/textView9"
+                    app:layout_constraintEnd_toEndOf="@+id/tvWeek"
                     app:layout_constraintHorizontal_bias="0.501"
-                    app:layout_constraintStart_toStartOf="@+id/textView9"
-                    app:layout_constraintTop_toBottomOf="@+id/textView9" />
+                    app:layout_constraintStart_toStartOf="@+id/tvWeek"
+                    app:layout_constraintTop_toBottomOf="@+id/tvWeek" />
 
-                <Button
-                    android:id="@+id/btnSalesAnalysis"
-                    android:layout_width="244dp"
-                    android:layout_height="85dp"
-                    android:layout_marginBottom="4dp"
-                    android:text="売上分析"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.497"
-                    app:layout_constraintStart_toStartOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -228,8 +218,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/Shiftsrecycleview"
                     android:layout_width="425dp"
-                    android:layout_height="420dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_height="490dp"
+                    android:layout_marginTop="5dp"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
