--- a/PosApp/app/src/main/res/layout/fragment_orders.xml
+++ b/PosApp/app/src/main/res/layout/fragment_orders.xml
@@ -113,10 +113,10 @@
 
     <Button
         android:id="@+id/btnCart"
-        android:layout_width="170dp"
+        android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginStart="32dp"
-        android:text="カート"
+        android:text="カート追加"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="@+id/btnOrder"
         app:layout_constraintStart_toEndOf="@+id/btnOrder"
@@ -148,17 +148,17 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="113dp"
-        android:layout_height="75dp"
-        android:layout_marginBottom="44dp"
-        android:text="追加"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.865"
-        app:layout_constraintStart_toEndOf="@+id/btnDrink" />
+<!--    <Button-->
+<!--        android:id="@+id/btnAdd"-->
+<!--        android:layout_width="113dp"-->
+<!--        android:layout_height="75dp"-->
+<!--        android:layout_marginBottom="44dp"-->
+<!--        android:text="追加"-->
+<!--        android:textSize="30dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.865"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/btnDrink" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
