--- a/PosApp/app/src/main/res/layout/recycleview_shifts.xml
+++ b/PosApp/app/src/main/res/layout/recycleview_shifts.xml
@@ -76,7 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvTime" />
 
     <ImageButton
-        android:id="@+id/deleteUserID"
+        android:id="@+id/btnDelete"
         android:layout_width="68dp"
         android:layout_height="62dp"
         android:layout_marginEnd="52dp"
@@ -85,5 +85,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_delete" />
+
+    <TextView
+        android:id="@+id/textView21"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:text=""
+        android:background="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
